# ztools

./: .gitignore  CLAUDE.md  MODEL_QUIRKS.md  README.md  REVIEW.md  _check_server.py  config.yaml  debug_eval.py  debug_parse.py  explore_model_quirks.py  generate_weekend.py  image_renamer.py  mlx_lib.py  model_eval.py  osaurus_lib.py  parse_debug_2.py  parse_debug_3.py  parse_debug_4.py  parse_debug_5.py  print_wrapper.py  print_wrapper2.py  print_wrapper3.py  pyproject.toml  rename_images_by_content.py  test_empty_tables.py  test_gemma.py  test_llm.py  test_mlx.py  test_parse.py  test_parse2.py  twitter.yaml  twitter_summarizer.py  twitter_summary.py  weekend.yaml  weekend_planner.py
.mlx_debug/: script_00c9e0d0.py  script_04902f7f.py  script_0584520e.py  script_075b2290.py  script_07bb9121.py  script_0be3fab7.py  script_108ddb43.py  script_199cb762.py  script_1ab90950.py  script_2e75b1b7.py  script_2fc284c7.py  script_30c11dbe.py  script_33ccf53a.py  script_34fa77ce.py  script_3ce28002.py  script_3da83c24.py  script_42868de8.py  script_4389cc8f.py  script_449ba64b.py  script_458ac53f.py  script_45b1a882.py  script_46339879.py  script_4808862f.py  script_4e803631.py  script_502c43eb.py  script_518a9f89.py  script_55df8f89.py  script_5a99a3fe.py  script_5d4dc653.py  script_65ce6515.py  script_66ca6194.py  script_6d09f0d7.py  script_7295f2c7.py  script_832e097c.py  script_891cb99a.py  script_8d5cae9a.py  script_917d0d49.py  script_97a8de21.py  script_9a42699c.py  script_a7016ee9.py  (+14 more)
conf/: config.yaml  eval_inputs.yaml  rename.yaml  weekend.yaml
docs/: MODEL_QUIRKS.md  (+2 more)
(+37 files in other folders)
